--- a/speed_frontend/package.json
+++ b/speed_frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "css-loader": "^7.1.2",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
