--- a/speed_frontend/package.json
+++ b/speed_frontend/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "style-loader": "^4.0.0"
   },
   "devDependencies": {
