--- a/speed_frontend/package.json
+++ b/speed_frontend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
     "next": "14.2.7",
