--- a/speed_backend/.env
+++ b/speed_backend/.env
@@ -1,1 +1,1 @@
-DB_URI=mongodb+srv://speed-w203_02:mcZVjixKaMvXNxEC@cluster0.u5jgx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URI=mongodb+srv://speed-w203_02:qi6jm1Gfmlp66CCZ@cluster0.u5jgx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
