--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: GitHub Actions Vercel Deploy
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  BACKEND_ORG_ID: ${{ secrets.BACKEND_ORG_ID }}
+  BACKEND_PROJECT_ID: ${{ secrets.BACKEND_PROJECT_ID }}
 on:
   pull_request:
     branches: [ "main" ]
