--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,7 +3,8 @@ name: GitHub Actions Vercel Preview
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
+  BACKEND_ORG_ID: ${{ secrets.BACKEND_ORG_ID }}
+  BACKEND_PROJECT_ID: ${{ secrets.BACKEND_PROJECT_ID }}
 on:
   workflow_dispatch:
 jobs:
